insert data into psql database

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,12 +1,24 @@
+//connectionPoolslick-postgres {
+//  connectionPool = "HikariCP"
+//  profile = "slick.jdbc.H2Profile$"
+//  dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
+//  properties = {
+//    serverName = "localhost"
+//    portNumber = "5432"
+//    database = "customer"
+//    user = example
+//    password = "password"
+//  }
+//  numThreads = 10
+//}
+
+
 slick-postgres {
   profile = "slick.jdbc.PostgresProfile$"
-  db {
-    dataSourceClass = "slick.jdbc.DriverDataSource"
-    properties = {
-      driver = "org.postgresql.Driver"
-      url = "jdbc:postgresql://127.0.0.1/exampledb"
-      user = slick
-      password = ""
-    }
+
+  db = {
+    password = "password"
+    user = "example"
+    url = "jdbc:postgresql://127.0.0.1/exampledb"
   }
 }
